--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-    
+    <section id="nav">
+        <div class="nav-container">
+            <h2>Digital</h2>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About us</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href="">Pricing</a></li>
+            </ul>
+        </div>
+
+    </section>
 </body>
 </html>
