added hero section's element and flexed it

--- a/index.html
+++ b/index.html
@@ -19,5 +19,42 @@
         </div>
 
     </section>
+
+    <section id="hero">
+        <div class="hero-container">
+            <div class="hero-content">
+                <h2>Artificial Intelligence Driving <br>
+Results For The Travel Industry</h2>
+<h4>Welcome  back! Please login to your account.</h4>
+    <form action="">
+        <label for="email">Email Section:</label> <br>
+        <input type="email" name="email" id="email" placeholder="Email Address">
+        <br>
+        <label for="password">Password:</label><br>
+        <input type="password" name="password" id="password" placeholder="Password">
+        <div class="forgot-pass">
+            <p>Remember Me</p>
+            <p>Forgot Password?</p>
+
+            
+        </div>
+        <input class="submit-login" type="submit" value="Login">
+        <input class="submit-signup" type="submit" value="Sign Up">
+
+       <div class="social">
+        <p>Or login with</p>
+        <p>Facebook</p>
+        <p>LinkedIn</p>
+        <p>Google</p>
+       </div>
+    </form>
+            </div>
+
+            <div class="hero-image">
+                <img src="./undraw_bike-ride_ba0o.svg" alt="">
+            </div>
+        </div>
+
+    </section>
 </body>
 </html>
