maked hero section's email and password part and also title part

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 Results For The Travel Industry</h2>
 <h4>Welcome  back! Please login to your account.</h4>
     <form action="">
-        <label for="email">Email Section:</label> <br>
-        <input type="email" name="email" id="email" placeholder="Email Address">
+        <label class="email-label" for="email">Email Section:</label> <br>
+        <input class="email"  type="email" name="email" id="email" placeholder="Email Address">
         <br>
-        <label for="password">Password:</label><br>
-        <input type="password" name="password" id="password" placeholder="Password">
+        <label class="password-label" for="password">Password:</label><br>
+        <input class="password" type="password" name="password" id="password" placeholder="Password">
         <div class="forgot-pass">
             <p>Remember Me</p>
             <p>Forgot Password?</p>
