added hover in email,passowrd,login and signup button

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@ Results For The Travel Industry</h2>
         <label class="password-label" for="password">Password:</label><br>
         <input class="password" type="password" name="password" id="password" placeholder="Password">
         <div class="forgot-pass">
-            <p>Remember Me</p>
+          <div>
+              <input  type="checkbox" name="" id="Remember Me"> <label for="Remember Me">Remember Me</label>
+          </div>
             <p>Forgot Password?</p>
 
             
