complete the hero section

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@ Results For The Travel Industry</h2>
         <input class="submit-signup" type="submit" value="Sign Up">
 
        <div class="social">
-        <p>Or login with</p>
-        <p>Facebook</p>
-        <p>LinkedIn</p>
-        <p>Google</p>
+        <p class="or">Or login with</p>
+        <p class="fb">Facebook</p>
+        <p class="fb">LinkedIn</p>
+        <p class="fb">Google</p>
        </div>
     </form>
             </div>
